[package]
name = "libnfqueue"
description = "Bindings for the libnetfilter_queue library"
version = "0.2.0"
authors = [
    "Laurie Clark-Michalek <lclarkmichalek@gmail.com>",
    "Zach Pomerantz <zach@terminal.com>"
]
license = "MIT"
repository = "https://github.com/bluepeppers/libnetfilter_queue"

[dependencies]
lazy_static = "0.1.*"
libc = "0.1"
num = "0.1.*"
